# rust-ms

./: .env  Cargo.toml  README.md
config/: default.json
src/: base_mod.rs  cache.rs  cache_mod.rs  http_mod.rs  httpclient.rs  httpclient_mod.rs  httpserver.rs  httpserver_mod.rs  main.rs  msbase.rs
src/kafka/: consumer.rs  consumer_mod.rs  mod.rs  producer.rs  producer_mod.rs
src/msbase/: mod.rs
src/mshttp/: mod.rs
