[package]
name = "rust-ms"
version = "0.3.0"
authors = ["Christian Froehlingsdorf <chris@5cf.de>"]

[dependencies]
env_logger = "0.4.3"
log = "0.3.8"
dotenv = "0.10.1"
iron = "0.5.1"
time = "0.1.38"
bodyparser = "0.7.0"
router = "0.5.1"
persistent = "0.3.0"
serde_json = "1.0.2"
diesel = { version = "0.16.0", features = ["mysql"] }
redis = "0.8.0"
reqwest = "0.8.1"
futures = "0.1.17"
rdkafka = "^0.13.0"
rdkafka-sys = "0.11.1-0"