[package]
name = "rust-ms"
version = "0.3.0"
authors = ["Christian Froehlingsdorf <chris@5cf.de>"]
edition = "2018"

[dependencies]
env_logger = "0.6.0"
log = "0.4.6"
dotenv = "0.13.0"
iron = "0.6.0"
time = "0.1.42"
bodyparser = "0.8.0"
router = "0.6.0"
persistent = "0.4.0"
serde_json = "1.0.37"
diesel = { version = "1.4.1", features = ["mysql"] }
redis = "0.9.1"
reqwest = "0.9.1"
futures = "0.1.25"
rdkafka = "0.18.0"
rdkafka-sys = "0.11.6-0"
